--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react": "^18",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
+    "stream-chat": "^8.33.0",
+    "stream-chat-react": "^11.19.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
