--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.372.0",
-    "next": "14.2.2",
+    "next": "^14.2.3",
     "nextjs": "^0.0.3",
     "nodejs": "^0.0.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-datepicker": "^6.9.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "stream-chat": "^8.33.0",
     "stream-chat-react": "^11.19.0",
     "tailwind-merge": "^2.3.0",
@@ -38,7 +38,7 @@
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.2",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
